@@ -40,6 +40,14 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="4.2.4" date="2022-06-13">
+      <description>
+	<p>
+	  Fixed stop export soundcard.
+	</p>
+      </description>
+    </release>
+
     <release version="4.2.3" date="2022-06-12">
       <description>
 	<p>
